# baskref

./: .gitignore  .pre-commit-config.yaml  .pylintrc  20220107_g.csv  LICENSE  README.md  names.csv  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run.py  setup.sh  tox.ini
.github/workflows/: codeql-analysis.yml  format_lint_type.yml
baskref/: __init__.py  data_collection_manager.py  data_saving_manager.py  exceptions.py  settings.py  utils.py
baskref/data_collection/: __init__.py  baskref_data_scraper.py  baskref_url_scraper.py  html_scraper.py
baskref/data_saving/: file_saver.py
baskref/shared_utils/: settings_utils.py
baskref/tests/baskref/data_collection/: test_baskref_data_scraper.py  test_baskref_url_scraper.py  test_scraper.py
baskref/tests/baskref/shared_utils/: test_date_utils.py  test_error_utils.py
notebooks/: code_tester.ipynb  tag_playoffs.ipynb  testing_baskref.ipynb
settings/: settings.py  settings.yaml
setup/db_setup/: db_creation.sql  db_st_creation.sql  table_creation.sql
src/: run.py
src/basketball_scraper/: __init__.py  data_collection_manager.py  data_saving_manager.py
src/data_collection/: data_collection_manager.py
src/data_collection/basketball_reference/: scraper.py
src/data_collection/scraper/: __init__.py  basketref_data_scraper.py  basketref_url_scraper.py  scraper.py
src/data_saving/: data_saver_manager.py
src/data_saving/db_saver/postgre/: db_stuff.py
src/data_saving/file_saver/: pandas_saver.py
src/etl/: etl_manager.py
src/utils/: date_utils.py  error_utils.py
tests/: test_run.py
tests/baskref/: test_exceptions.py  test_utils.py
tests/baskref/data_collection/: test_baskref_url_scraper.py  test_scraper.py
tests/baskref/data_saving/: test_file_saver.py
tests/src/data_collection/scraper/: test_basketref_url_scraper.py  test_scraper.py
tests/src/data_saving/file_saver/: test_pandas_saver.py
tests/src/utils/: test_date_utils.py  test_error_utils.py
