[build-system]
requires = ["setuptools~=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "baskref"
version = "0.0.1"
authors = [
  {name="Dominik Zulovec Sajovic", email="dominik.zsajovic@gmail.com"},
]
description = "BaskRef is a tool to scrape basketball Data from the web."
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/orion512/basketball_scraper"
"Bug Tracker" = "https://github.com/orion512/basketball_scraper/issues"

[project.scripts]
baskref = "baskref:run_baskref"

[tool.black]
line-length = 79
target-version = ['py38']
#include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |venv
  |scripts
)/
'''

[tool.mypy]
ignore_missing_imports = true
