[build-system]
requires = ["setuptools~=62.6", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "baskref"
version = "0.0.1"
authors = [
  {name="Dominik Zulovec Sajovic", email="dominik.zsajovic@gmail.com"},
]
keywords = ["basketball", "web scraper", "python"]
description = "baskRef is a tool to scrape basketball Data from the web."
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests_html>=0.10.0",
]

[project.urls]
"Homepage" = "https://github.com/orion512/basketball_scraper"
"Bug Tracker" = "https://github.com/orion512/basketball_scraper/issues"

[project.scripts]
baskref = "baskref:run_baskref"

[tool.black]
line-length = 79
target-version = ['py38']
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |venv
  |scripts
)/
'''

[tool.mypy]
ignore_missing_imports = true

[tool.check-manifest]
ignore = [
  ".travis.yml", "tests/*", "requirements_dev.txt",
  "datasets", ".pre-commit-config.yaml", ".pylintrc", "pytest.ini",
  "venv", 
  ]
