[build-system]
requires = [
  "setuptools",
  "wheel",
  ]
build-backend = "setuptools.build_meta"

[project]
name = "baskref"
version = "0.0.6"
authors = [
  {name="Dominik Zulovec Sajovic", email="dominik.zsajovic@gmail.com"},
]
keywords = ["basketball", "web scraper", "python"]
description = "baskRef is a tool to scrape basketball Data from the web."
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.28.1",
  "beautifulsoup4==4.11.1",
  "fake-useragent==1.1.1",
]

[project.urls]
"Homepage" = "https://github.com/orion512/basketball_scraper"
"Bug Tracker" = "https://github.com/orion512/basketball_scraper/issues"
"Project Board" = "https://github.com/users/orion512/projects/2/views/1"

[project.scripts]
baskref = "baskref:run_baskref"

[tool.black]
line-length = 79
target-version = ['py39']
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |venv
  |scripts
)/
'''

[tool.setuptools.packages.find]
include = ["baskref"]
exclude = ["notebooks*"]

[tool.mypy]
ignore_missing_imports = true

[tool.check-manifest]
ignore = [
  ".travis.yml", "tests/*", "requirements_dev.txt",
  "datasets", ".pre-commit-config.yaml", ".pylintrc", "pytest.ini",
  "venv", 
  ]
